# CS2600

./: helloworld
Week1/: helloworld.c  hwOne.txt
lecture/: CMakeLists.txt
lecture/lecture4/: helloworldProgram  ifelse.c  ifelseProgram  switch.c  switchProgram  ternary.c  ternaryProgram
lecture/lecture6/: struct  struct.c  structFunction.c  structPointer.c  structUnion.c  union  union.c  varUnion  varUnion.c  varUnion2  varUnion2.c
lecture/lecture7/: add.c  commandLineInputs  commandLineInputs.c  enum  enum.c  header.h  mainAdd.c  random  random.c
lecture/mathFunctions/: Makefile  mathFunc.c  mathFunc.h  mathFuncMain.c
search-multiple-function/: a.out  employeeMain.c  employeeOne.c  employeeTable.c
single-search-pass-function/: a.out  employee.h  employeeTwo.c
